# markovbot

./: .dockerignore  .gitignore  Dockerfile  README.md  botconfig.py  dataset.py  docker-compose.yml  markovbot.py  model_manager.py  pyproject.toml  requirements.txt  tests.py  utils.py
.github/workflows/: build_containers.yml  test.yml
