[project]
name = "markovbot"
version = "0.1.0"
description = "Markovbot is a Discord Bot that utilizes Markovify and Markov Chains to imitate a user with their provided Message data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "loguru>=0.7.3",
    "markovify",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
markovify = { git = "https://github.com/bscout9956/markovify" }
